<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            style="@style/result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/uuid"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/stop_time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/record_time_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            style="@style/result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/press_number_record" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="0.5"
                android:text="@string/order"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="0.5"
                android:text="@string/number"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/down_time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/up_time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="17sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/number_press_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            style="@style/result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_value" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/accelerometerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accelerometer" />

                <RadioButton
                    android:id="@+id/gyroscopeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gyroscope" />

                <RadioButton
                    android:id="@+id/magnetometerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magnetometer" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ambientlightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ambientlight" />

                <RadioButton
                    android:id="@+id/rotationvectorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotationvector" />

                <RadioButton
                    android:id="@+id/proximityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proximity" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/barometerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barometer" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/y"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="35dip"
                android:layout_weight="1"
                android:text="@string/z"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/sensorvalue_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>